<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramattecgmail.rafah.herdeirosapp.Activitys.RetiroActivity"
    android:orientation="vertical"
    android:background="@color/primaryLightColor">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:elevation="8dp"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_placar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alt_card_placar"
        android:layout_marginTop="@dimen/mrg_top_card"
        android:layout_marginLeft="@dimen/mrg_left_card"
        android:layout_marginRight="@dimen/mrg_left_card"
        app:cardCornerRadius="6dp"
        android:elevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/primaryDarkColor"
            android:paddingLeft="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_equipeA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grupo1"
                    android:textSize="@dimen/tam_nomes_equipes"
                    android:textColor="@color/primaryTextColor"
                    android:layout_gravity="bottom"/>
                <TextView
                    android:id="@+id/tv_equipeB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grupo2"
                    android:textSize="@dimen/tam_nomes_equipes"
                    android:textColor="@color/primaryTextColor"
                    android:layout_gravity="bottom"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_placarA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="@dimen/tam_nomes_equipes"
                    android:textColor="@color/primaryTextColor"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_placarB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="@dimen/tam_nomes_equipes"
                    android:textColor="@color/primaryTextColor"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/tv_atualizacao_placar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mrg_left_card"
        android:textSize="@dimen/tam_atualizacao_placar"
        android:text="atualizado em: "
        android:textStyle="italic"
        android:textColor="@color/primaryTextColor"/>

    <TextView
        android:id="@+id/tv_cardapio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mrg_left_card"
        android:layout_marginTop="@dimen/mrg_top_card"
        android:text="Cardapio"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/tam_tv_cardapio"/>

    <LinearLayout
        android:id="@+id/ll_cardapio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/im_cardapio"
            android:layout_width="@dimen/tam_im_cardapio"
            android:layout_height="@dimen/tam_im_cardapio"
            android:src="@drawable/cardapio_icone"
            android:layout_marginLeft="@dimen/mrg_left_card"
            android:layout_marginRight="@dimen/mrg_left_card"
            android:layout_gravity="center"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <Button
                android:id="@+id/bt_dia1_cardapio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexta"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:id="@+id/bt_dia2_cardapio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sabado"
                android:textColor="@color/primaryTextColor"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@+id/bt_dia1_cardapio"
                android:layout_marginLeft="8dp" />

            <Button
                android:id="@+id/bt_dia3_cardapio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domingo"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/bt_dia1_cardapio"
                app:layout_constraintVertical_bias="0.77" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_cronograma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mrg_left_card"
        android:layout_marginTop="20dp"
        android:text="Programação"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/tam_tv_cardapio" />

    <LinearLayout
        android:id="@+id/ll_cronograma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_data1_cronograma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sexta"
            android:textColor="@color/primaryTextColor"/>
        <Button
            android:id="@+id/bt_data2_cronograma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sabado"
            android:textColor="@color/primaryTextColor"/>
        <Button
            android:id="@+id/bt_data3_cronograma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/domingo"
            android:textColor="@color/primaryTextColor"/>

    </LinearLayout>

</LinearLayout>
